# Rusted-Server

./: .gitignore  AUTHORS  Cargo.toml  README.md  config.lua.dist  schema.sql  schemaPostgres.sql
app/server/: cargo.toml
crates/admin/: cargo.toml
crates/common/: cargo.toml
crates/common/src/: configmanager.rs  error.rs  lib.rs  logger.rs
crates/core/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: connection.rs  lib.rs  manager.rs  tasks.rs
crates/entities/: cargo.toml
crates/entities/src/: lib.rs
crates/items/: cargo.toml
crates/items/src/: lib.rs
crates/net/: Cargo.toml
crates/net/src/: connection.rs  lib.rs  networkmessage.rs  outputmessage.rs  protocol.rs  protocol_login.rs
crates/persistence/: cargo.toml
crates/persistence/src/: lib.rs
crates/protocols/game/: cargo.toml
crates/protocols/game/src/: lib.rs
crates/protocols/login/: cargo.toml
crates/protocols/login/src/: lib.rs
crates/rules/: cargo.toml
crates/rules/src/: lib.rs
crates/scripting/: Cargo.toml
crates/scripting/src/: lib.rs
crates/server/: cargo.toml
crates/server/src/: banner.rs  build.rs  main.rs
crates/services/: cargo.toml
crates/services/src/: lib.rs
crates/timewheel/src/: lib.rs
crates/world/: cargo.toml
crates/world/src/: lib.rs
logs/: server.log.2025-09-24  server.log.2025-09-25
src/: main.rs  scheduler.rs  tasks.rs
src/db/: database.rs  databasemanager.rs  databasetasks.rs  mod.rs
src/net/: connection.rs  consts.rs  lib.rs  login.rs  mod.rs  networkmessage.rs  outputmessage.rs  packet.rs  protocol.rs  protocol_login.rs  rsa.rs  tools.rs  types.rs  xtea.rs
src/services/: mod.rs  service.rs  servicemanager.rs
