[workspace]
members = [
    "crates/common",
    "crates/timewheel",
    "crates/world",
    "crates/entities",
    "crates/items",
    "crates/rules",
    "crates/protocols/login",
    "crates/protocols/game",
    "crates/net",
    "crates/scripting",
    "crates/persistence",
    "crates/services",
    "crates/admin",
    "crates/server",
]

# Gemensamma dev-beroenden eller verktyg kan placeras här om nödvändigt
[workspace.package]
edition = "2021"
resolver = "2"

[workspace.metadata]
server_name = "Rusted Server"
developers = "Wickedviruz & contributors"
homepage = "https://github.com/Wickedviruz/Rusted-Server"