[package]
name = "rusted-server"
version = "0.1.0"
edition = "2021"
authors = ["Wickedviruz & contributors"]
homepage = "https://github.com/Wickedviruz/Rusted-Server"

[dependencies]
chrono = "0.4"
rustc_version_runtime = "0.2"
anyhow = "1"
once_cell = "1.19"
colored = "2.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bytes = "1"
mysql_async = "0.32"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4"
base64 = "0.22"
rsa = "0.9"
num-bigint-dig = "0.8"
futures = "0.3.31"
sha1 = "0.10"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
mlua = { version = "0.9", features = ["lua54", "serialize", "vendored"] }
openssl = "0.10"
